client/src/Components/Wrapper/wrapper.scss
div[numberbox="true"] {
  input[type="text"] {
    text-align: right !important;
  }
}
.DayPickerInput {
  input {
    font: inherit;
    color: currentColor;
    border: 0;
    margin: 0;
    padding: 6px 0 7px;
    display: block;
    min-width: 0;
    flex-grow: 1;
    box-sizing: content-box;
    background: none;
    vertical-align: middle;
    -webkit-tap-highlight-color: transparent;
    background-color: #fbfbfb;
    width: 100%;
  }
}

.DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
  background-color: #00bcb0 !important;
}
.DayPicker-TodayButton {
  color: #00bcb0 !important;
  padding-left: 70px;
  font-weight: bold;
}

